# fastapi_exp

./: .dockerignore  .env  .env.test  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  Pipfile  README.MD  README.md  alembic.ini  clean.sh  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-app.yml
alembic/: env.py
alembic/versions/: 07d155a50ef1_init_setup.py  d4c5bfa968c2_create_feature_store_and_predictions.py
app/: main.py
app/api/: router.py
app/api/endpoints/: health.py  predict.py
app/db/: session.py
app/db/models/: feature_store.py  predictions.py
app/ml/: model.py  preprocessor.py  train.py
app/ml/job/: upload_feature_store.py
app/ml/jobs/: upload_feature_store.py
app/schemas/: predict.py
fastapi_exp/: __init__.py  database.py  main.py  models.py  pipeline.py  upload_data.py
fastapi_exp/api/: router.py
fastapi_exp/api/endpoints/: predictions.py
fastapi_exp/core/: database.py
fastapi_exp/models/: models.py
fastapi_exp/schemas/: prediction.py
models/: lgbm_model_2024-05-02_16-47-50.txt  lgbm_preprocessor_2024-05-02_16-47-50.pkl  logreg_pipeline_2024-05-02_16-47-50.pkl
sandbox/: db.ipynb  lgbm_model.txt  lgbm_preprocessor.pkl  logreg_model.pkl  model.ipynb
scripts/: preprocess_data.py  run_training_pipeline.py  train.py  upload_feature_data.py
src/api/: crud.py  database.py  main.py  models.py  schemas.py
src/db/: db_utils.py
src/train/: train.py  trainer.py  transform.py  utils.py
stress_tests/: stress_test.py
tests/: conftest.py  test_main.py  test_model.py  test_predict.py
tests/functional/: test_endpoint.py  test_train.py
tests/unit/: test_db.py  test_train.py
