[project]
name = "fastapi-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "requests>=2.32.4",
    "ruff>=0.12.7",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.42",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.3",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "alembic*"]
